<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:theme="@android:style/Theme.Wallpaper.NoTitleBar"
    tools:context=".SignUp">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/usernameSignUp"
        android:layout_width="197dp"
        android:layout_height="20dp"
        android:layout_marginTop="80dp"
        android:background="#11000000"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/username"
        android:drawableStart="@drawable/ic_action_user"
        android:textColorHint="@color/gray"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:importantForAutofill="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/passwordSignUp"
        android:layout_width="197dp"
        android:layout_height="20dp"
        android:background="#11000000"
        android:ems="10"
        android:hint="@string/password"
        android:drawableStart="@drawable/ic_action_pass"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColorHint="@color/gray"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameSignUp"
        app:layout_constraintVertical_bias="0.125" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewSignUp"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="72dp"
        app:cardBackgroundColor="@color/colorAccent"
        app:cardCornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordSignUp" >

        <Button
            android:id="@+id/buttonSignUp"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@color/colorAccent"
            android:textSize="18sp"
            android:text="@string/sign"
            android:textColor="@color/white" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/loginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/goLog"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewSignUp" />


</androidx.constraintlayout.widget.ConstraintLayout>