<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_play"
    android:theme="@android:style/Theme.Wallpaper.NoTitleBar"
    tools:context=".PlayScreen">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewPlayWord"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="112dp"
        app:cardBackgroundColor="@color/colorAccent"
        app:cardCornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <Button
            android:id="@+id/buttonPlayWord"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@color/colorAccent"
            android:text="@string/play_word"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewPlayPassage"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="112dp"
        app:cardBackgroundColor="@color/colorAccent"
        app:cardCornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewPlayWord">

        <Button
            android:id="@+id/buttonPlayPassage"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@color/colorAccent"
            android:text="@string/play_passage"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewBackTrain"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="76dp"
        app:cardBackgroundColor="@color/colorAccent"
        app:cardCornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewPlayPassage">

        <Button
            android:id="@+id/buttonBackPlay"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@color/colorAccent"
            android:text="@string/back"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>